# O.D.I.N.-V1

./: .gitignore  CLAUDE.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_GUIDE.md  LAUNCH.md  README.md  pyproject.toml  start-odin.sh
.claude/: launch.json
.github/workflows/: ci.yml
design/: REMOTE-ACCESS.md  SPEC-agent-skills-runtime.md  SPEC-truthfulness-and-image-generation.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/electron/: main.js  preload.js  runtime.js  runtime.test.js
frontend/src/: App.jsx  styles.css  testSetup.js
frontend/src/components/: AICore.jsx  AgentsView.jsx  ChatDock.jsx  ChatDock.test.jsx  ChatView.jsx  ChatView.test.jsx  CoreFocusView.jsx  CoreFocusView.test.jsx  DataPanel.jsx  MetricsRail.jsx  OdinStage.jsx  OdinStage.test.jsx  ProjectDashboard.jsx  RuneCore.jsx  SecurityPanel.jsx  SecurityPanel.test.jsx  (+9 more)
graphify-out/: .graphify_labels.json  .graphify_python  .graphify_root  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
jarvis/: __init__.py
jarvis/backend/: __init__.py
jarvis/config/: cameras.example.json  permissions.json
scripts/: manage.py  setup_cameras.py  verify_capabilities.py
skills/: README.md
skills/nvidia-hosted-reasoning/: SKILL.md
tests/: test_agent.py  test_api.py  test_core.py  test_heartbeat.py  test_identity.py  test_improvement.py  test_new_features.py  test_safety.py  test_security.py  test_security_monitor.py  test_setup_cameras.py
training/: README.md  config.yaml  evaluate.py  inference.py  train.py
(+65 files in other folders)
