[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-v1"
version = "0.1.0"
description = "Local-first Jarvis V1.1 assistant scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110",
  "pydantic>=2.6",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "httpx2>=0.28",
  "ruff>=0.4",
]
vector = [
  "chromadb>=0.5",
]

[tool.setuptools.packages.find]
include = ["jarvis*"]

[tool.setuptools.package-data]
jarvis = ["config/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
