[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-v1"
version = "1.1.0"
description = "Local-first Jarvis V1.1 assistant scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=42",
  "fastapi>=0.110",
  "psutil>=5.9",
  "pydantic>=2.6",
  "uvicorn[standard]>=0.27",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28",
  "ruff>=0.4",
]
vector = [
  "chromadb>=0.5",
]
voice = [
  "openwakeword>=0.6",
  "piper-tts>=1.2",
  "sounddevice>=0.5",
]

[tool.setuptools.packages.find]
include = ["jarvis*"]

[tool.setuptools.package-data]
jarvis = ["config/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"
